[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme-default.tres" type="Theme" id=1]
[ext_resource path="res://components/notification.gd" type="Script" id=2]
[ext_resource path="res://art-built/9patch/panel-9patch.png" type="Texture2D" id=3]

[sub_resource type="Animation" id=1]
resource_name = "slide_in"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("mover:offset_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.3 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ -200.0, -40.0 ]
}

[node name="notification" type="Control"]
anchor_right = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [ 270.0 ]
}

[node name="mover" type="Control" parent="."]
anchor_right = 1.0
offset_top = -200.0
mouse_filter = 2

[node name="background" type="Control" parent="mover"]
anchor_right = 1.0
offset_bottom = 200.0
grow_vertical = 0

[node name="nine_patch_rect" type="NinePatchRect" parent="mover/background"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
texture = ExtResource( 3 )
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="rich_text_label" type="RichTextLabel" parent="mover/background/nine_patch_rect"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 40.0
offset_right = -20.0
offset_bottom = -20.0
clip_contents = false
mouse_filter = 2
bbcode_enabled = true
text = "I am a [b]bold[/b] one.
This text is [i]rich[/i]. Look at it flow! Wooow hahahaha. Desu desu"
text = "I am a bold one.
This text is rich. Look at it flow! Wooow hahahaha. Desu desu"
scroll_active = false

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/slide_in = SubResource( 1 )

[node name="timer" type="Timer" parent="."]
wait_time = 3.3
one_shot = true

[connection signal="gui_input" from="mover/background" to="." method="_gui_event"]
